tests/baselines/reference/inheritanceStaticPropertyOverridingMethod.errors.txt
inheritanceStaticPropertyOverridingMethod.ts(7,7): error TS2417: Class static side 'typeof b' incorrectly extends base class static side 'typeof a'.
  Types of property 'x' are incompatible.
    Type 'string' is not assignable to type '() => string'.


==== inheritanceStaticPropertyOverridingMethod.ts (1 errors) ====
    class a {
        static x() {
            return "20";
        }
    }
    
    class b extends a {
          ~
!!! error TS2417: Class static side 'typeof b' incorrectly extends base class static side 'typeof a'.
!!! error TS2417:   Types of property 'x' are incompatible.
!!! error TS2417:     Type 'string' is not assignable to type '() => string'.
        static x: string;
    }